Fixed visible configurable variation qty when moved outside sku block

--- a/web/css/layout/product/_common.less
+++ b/web/css/layout/product/_common.less
@@ -105,9 +105,9 @@
             align-items: center;
             gap: @1;
         }
-        .configurable-variation-qty {
-            display: none;
-        }
+    }
+    .product-info-main .configurable-variation-qty {
+        display: none;
     }
 
     .product-info-wrapper .product-add-form {
